# proton

./: .gitignore  CMakeLists.txt  Grammar.txt  README.md  clang-format.sh  gcov-report.sh  grammar.ebnf  problems.prot  test.prot  ticktacktoe-example.prot  todo.txt  variant.prot
src/: CMakeLists.txt  main.cpp
src/errors/: CMakeLists.txt  ErrorHandler.cpp  ErrorHandler.h  ErrorHandlerBase.cpp  ErrorHandlerBase.h  ErrorType.h  StrictErrorHandler.cpp  StrictErrorHandler.h
src/input/: CMakeLists.txt  CharReaderBase.cpp  CharReaderBase.h  FileCharReader.cpp  FileCharReader.h  Position.h  StringCharReader.cpp  StringCharReader.h
src/interpreter/: CMakeLists.txt  CastHandler.cpp  CastHandler.h  Environment.cpp  Environment.h  FunctionBody.h  Interpreter.cpp  Interpreter.h  OperatorsHandler.cpp  OperatorsHandler.h  Scope.cpp  Scope.h  ScopeAnalyzer.cpp  ScopeAnalyzer.h  ScopeChecker.cpp  ScopeChecker.h  ScopedTable.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  StackFrame.cpp  StackFrame.h  Type.h  TypeCastHandler.cpp  TypeCastHandler.h  TypeOperatorsHandler.cpp  TypeOperatorsHandler.h  Value.h  Variable.h  config.h  interpreter_utils.cpp  interpreter_utils.h
src/lexer/: CMakeLists.txt  CharReader.h  ICharReader.h  Lexer.cpp  Lexer.h  Token.h  TokenType.h  lexer_utils.cpp  lexer_utils.h  main.cpp  utils.cpp  utils.h
src/parser/: ASTNode.h  ASTVisitor.h  Block.h  CMakeLists.txt  Declaration.h  Definition.h  Expression.h  Parser.cpp  Parser.h  Program.h  Statement.h  main.cpp  parser_utils.cpp  parser_utils.h
test/: CMakeLists.txt
test/input/: StringCharReader_test.cpp
test/lexer/: CharReader_test.cpp  Lexer_test.cpp  TokenType_test.cpp
test/mocks/: ErrorHandlerMock.h
test/source/input/: StringCharReader_test.cpp
test/source/lexer/: Lexer_test.cpp  TokenType_test.cpp
test/source/parser/: ParseConstDef_test.cpp  ParseExpression_test.cpp  ParseFnDef_test.cpp  ParseFunctionalExpr_test.cpp  ParsePrimaryExpr_test.cpp  ParseProgram_test.cpp  ParseStatement_test.cpp  ParseStructDef_test.cpp  ParseVarDef_test.cpp  ParseVariantDef_test.cpp  ParserFixture.h  ParserTest.h  Parser_test.cpp
